k8s/statefulset-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: exam
spec:
  replicas: 1
  serviceName: "db"
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres-container
        image: bouchrabo/docker_projet:postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "500m"     
            memory: "1Gi"  
          limits:
            cpu: "1"       
            memory: "2Gi"  
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
