k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32000  
  type: NodePort
