k8s/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: exam
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
