k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exam
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
